Fixing styling of header - everything aligned with design

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
+  padding:8px;
+
+}
+
+.left,
+.right {
+  display:flex;
+  gap: 16px;px;
+  align-items: center;
+
 }
 
 .profile-image {
@@ -45,4 +57,8 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  gap: 16px;
+  margin:0px;
+  padding:0px;
 }
